Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9924

[Python] Performance regression reading individual Parquet files using Dataset interface

    XMLWordPrintableJSON

Details

    Description

      I haven't investigated very deeply but this seems symptomatic of a problem:

      In [27]: df = pd.DataFrame({'A': np.random.randn(10000000)})                                                                                                                              
      
      In [28]: pq.write_table(pa.table(df), 'test.parquet')                                                                                                                                     
      
      In [29]: timeit pq.read_table('test.parquet')                                                                                                                                             
      79.8 ms ± 1.25 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)
      
      In [30]: timeit pq.read_table('test.parquet', use_legacy_dataset=True)                                                                                                                    
      66.4 ms ± 1.33 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)
      

      Attachments

        Issue Links

          Activity

            People

              bkietz Ben Kietzman
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 4h 10m
                  4h 10m