ARROW-9924: [C++][Dataset] Enable per-column parallelism for single ParquetFileFragment scans